--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,9 @@ body {
 
 .book img {
   text-align: center;
+  width: 200px;
+  height: 300px;
+  border: 1px solid #000;
 }
 
 @media screen and (min-width: 768px) {
