--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@ body {
 
 .book h4 {
   letter-spacing: 5px;
+  color: "#617d98";
+  font-size: "0.75rem";
+  margin-top: "0.25rem";
 }
 
 .book img {
